# cosmic

./: .pylintrc  LICENSE.md  README.md  pyproject.toml
cosmic/: batch.py  email.py  http_api.py  messagebus.py  order.py  repository.py  services.py
cosmic/domain/: batch.py  events.py  order.py  product.py
cosmic/service_layer/: services.py  unit_of_work.py
cosmic/sqlalchemy/: mappings.py  repository.py  unit_of_work.py
tests/: config.py  conftest.py  test_api.py  test_domain.py  test_repository.py  test_services.py  test_uow.py
