[tool.poetry]
name = "cosmic"
version = "0.1.0"
description = ""
authors = ["Tarcísio Eduardo Moreira Crocomo <tarcisioe@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.39"
fastapi = "^0.78.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.8.1"
mypy = "^0.961"
black = "^22.6.0"
summon-python = {extras = ["core"], version = "^0.2.0"}
flake8 = "^4.0.1"
pylint = "^2.14.4"
pytest-cov = "^3.0.0"
pre-commit = "^2.19.0"
isort = "^5.10.1"
types-SQLAlchemy = "^1.4.41"
httpx = "^0.23.0"
uvicorn = "^0.18.2"
pytest-asyncio = "^0.18.3"

[tool.summon.plugins.python]
test-modules = ['tests']

[tool.pytest.ini_options]
asyncio_mode = 'auto'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
